@@ -666,16 +666,16 @@ void GModelSky::read(const GXmlElement& xml)
     name(xml.attribute("name"));
 
     // Set model TS
-    std::string ts = xml.attribute("ts");
-    if (ts.length() > 0) {
+    if (xml.has_attribute("ts")) {
+        std::string ts = xml.attribute("ts");
         this->ts(gammalib::todouble(ts));
     }
 
-    // Check flag if TS value should be computed
-    bool tscalc = (xml.attribute("tscalc") == "1") ? true : false;
-
-    // Set flag if TS value should be computed
-    this->tscalc(tscalc);
+    // Set TS computation flag
+    if (xml.has_attribute("tscalc")) {
+        bool tscalc = (xml.attribute("tscalc") == "1") ? true : false;
+        this->tscalc(tscalc);
+    }
 
     // Set instruments
     instruments(xml.attribute("instrument"));
